--- a/public/css/_proj.scss
+++ b/public/css/_proj.scss
@@ -225,6 +225,8 @@
 			section.body{
 				padding-top:2.5vh;
 				padding-bottom:2.5vh;
+				padding-left:1em;
+				padding-right:1em;
 				display:flex;
 				background:white;
 				margin-top:2vh;
