--- a/public/css/_queries.css
+++ b/public/css/_queries.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$blue".
-        on line 32 of _queries.scss
+        on line 49 of _queries.scss
 
-27: 				width:100vw;
-28: 				align-items: center;
-29: 				header{
-30: 					width:80vw;
-31: 					text-align:center;
-32: 					border:solid 0.3em $blue;
-33: 				}
-34: 				article{
-35: 					margin-bottom:5vh;
-36: 					width:100vw;
-37: 					display:flex;
+44: 				    -ms-flex-align: center;
+45: 				        align-items: center;
+46: 				header{
+47: 					width:80vw;
+48: 					text-align:center;
+49: 					border:solid 0.3em $blue;
+50: 				}
+51: 				article{
+52: 					margin-bottom:5vh;
+53: 					width:100vw;
+54: 					display:-webkit-box;
 
 Backtrace:
-_queries.scss:32
+_queries.scss:49
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
@@ -118,4 +118,4 @@ _queries.scss:32
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$blue\".\A         on line 32 of _queries.scss\A \A 27: 				width:100vw;\A 28: 				align-items: center;\A 29: 				header{\A 30: 					width:80vw;\A 31: 					text-align:center;\A 32: 					border:solid 0.3em $blue;\A 33: 				}\A 34: 				article{\A 35: 					margin-bottom:5vh;\A 36: 					width:100vw;\A 37: 					display:flex;"; }
+  content: "Error: Undefined variable: \"$blue\".\A         on line 49 of _queries.scss\A \A 44: 				    -ms-flex-align: center;\A 45: 				        align-items: center;\A 46: 				header{\A 47: 					width:80vw;\A 48: 					text-align:center;\A 49: 					border:solid 0.3em $blue;\A 50: 				}\A 51: 				article{\A 52: 					margin-bottom:5vh;\A 53: 					width:100vw;\A 54: 					display:-webkit-box;"; }
