getting ready for gh-pages

--- a/public/html/views/contact.html
+++ b/public/html/views/contact.html
@@ -19,8 +19,8 @@
           <h2>JoshPeterson15</h2>
         </li>
         <li class="linkedin">
-          <h1>LINKEDIN</h1><a href="www.linkedin.com/in/josh-peterson-b9093910b">
-            <h2>Linkedin</h2></a>
+          <h1>LINKEDIN</h1><a href="https://www.linkedin.com/in/josh-peterson-b9093910b" target="__blank">
+            <h2>https://www.linkedin.com/in/josh-peterson-b9093910b</h2></a>
         </li>
       </ul>
     </section>
