--- a/public/html/views/contact.pug
+++ b/public/html/views/contact.pug
@@ -15,8 +15,8 @@
 					h2 JoshPeterson15
 				li.linkedin
 					h1 LINKEDIN
-					a(href="www.linkedin.com/in/josh-peterson-b9093910b")
-						h2 Linkedin
+					a(href="https://www.linkedin.com/in/josh-peterson-b9093910b", target="__blank")
+						h2 https://www.linkedin.com/in/josh-peterson-b9093910b
 
 	#message.wow.fadeIn
 		header
